# DistKV-Erasure-Coding

./: .gitignore  .gitmodules  Cargo.toml  README.md  reorganize.sh  scripts.ps1  scripts.sh
.github/: copilot-instructions.md
benchmark/: benchmark_k6_read.ipynb  benchmark_k6_write.ipynb  benchmark_regression.ipynb  benchmark_trace.ipynb  benchmark_visualization.ipynb  benchmark_visualization_read_cached.ipynb  benchmark_visualization_write.ipynb  docker-compose.yml  oneshot.js  script-etcd.js  script-read.js  script-system.js  script-write.js  script.js
benchmark/etcd/: .gitignore  start_all
benchmark/etcd/node1/: etcd.yaml
benchmark/etcd/node2/: etcd.yaml
benchmark/etcd/node3/: etcd.yaml
benchmark/etcd/node4/: etcd.yaml
benchmark/etcd/node5/: etcd.yaml
benchmark/etcd/node6/: etcd.yaml
etc/: bench.json  config.json  config_ec_standard.json  config_single_node.json  ec_config.json  organizer.json  replication_config.json  test_config.json
src/: lib.rs  main.rs
src/base_libs/: _operation.rs  _paxos_types.rs  _types.rs  mod.rs
src/base_libs/network/: _address.rs  _connection.rs  _messages.rs  _server.rs  _transaction.rs  mod.rs
src/classes/: _load_balancer.rs  mod.rs  node.rs  store.rs
src/classes/config/: _config.rs  mod.rs
src/config/: _config.rs  _constants.rs  _pending_set.rs  mod.rs
src/ec/: mod.rs
src/store/: _key_index_map.rs  _memory_store.rs  _persistent_store.rs  mod.rs
tests/: mod.rs
tests/helper/: _cluster_helper.rs  mod.rs
tests/integration/: _basic_cluster.rs  _cluster_helper.rs  mod.rs
tests/unit/: _ec.rs  mod.rs
(+2339 files in other folders)
