[package]
name = "distkv"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
rand = "0.8"
reed-solomon-erasure = { version = "6.0", features = [ "simd-accel" ] }
rust-rocksdb = "0.23.2"
memcache = "0.18.0"
actix-web = "4.10.2"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"