[package]
name = "distkv"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
assert_cmd = "2"
predicates = "0.3"

[dependencies]
bincode = "1.3.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
rand = "0.8"
reed-solomon-erasure = { version = "6.0", features = ["simd-accel"] }
rust-rocksdb = "0.23.2"
actix-web = "4.10.2"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
clap = { version = "4", features = ["derive"] }
moka = { version = "0.12", features = ["future"] }
